--- a/www/index.html
+++ b/www/index.html
@@ -29,8 +29,8 @@
         <div class="app">
             <h1>Apache Cordova</h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event listening">Conectando al dispositivo</p>
+                <p class="event received">Dispositivo listo</p>
             </div>
         </div>
         <!-- Add in the following line for testing manually via XCode and remove the phonegap.js reference -->
